# ACP

./: .gitignore
cct_proxy/: CMakeLists.txt  cct_proxy_service.cpp  cct_proxy_service.h  main.cpp  run_multiple_proxies.sh
ccw_proxy/: CMakeLists.txt  ccw_proxy_protocol.json  ccw_proxy_service.cpp  ccw_proxy_service.h  listener.cpp  listener.h  main.cpp  session.cpp  session.h
coin_toss/: CMakeLists.txt  ac_protocol.cpp  ac_protocol.h  cc_coin_toss.cpp  cc_coin_toss.h  cc_udp_test.cpp  cc_udp_test.h  coin_toss_test.cpp  coin_toss_test.h  coin_toss_tester.cpp
comm_client/: CMakeLists.txt  ReadMe.md  ac_protocol.cpp  ac_protocol.h  cct_proxy_client.cpp  cct_proxy_client.h  cct_proxy_service.cpp  cct_proxy_service.h  ccw_proxy_service.cpp  ccw_proxy_service.h  comm_client.cpp  comm_client.h  comm_client_factory.cpp  comm_client_factory.h  comm_client_tcp_mesh.cpp  comm_client_tcp_mesh.h  comm_client_udp.cpp  comm_client_udp.h  mutex_timed_lock_for_macs.cpp  mutex_timed_lock_for_macs.h  subs_for_macosx.cpp  subs_for_macosx.h
